kubernetes/yaml_redis/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis # This now selects the pods from the new redis-deployment
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
