kubernetes/yaml_redis/websurfx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websurfx-service
spec:
  selector:
    app: websurfx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP # Use NodePort if you don't have a LoadBalancer in your cluster
